--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/**** Mobile Styles ****/
+
 /*** Global Styles ***/ 
 body {
   font-family: "Space Grotesk", sans-serif;
@@ -15,20 +17,26 @@ body {
 
 /*** Header Styles ***/
 .homepage-hero .content-wrapper {
-    height: 1300px;
+    height: 2900px;
 }
 
-header h1 {
-    font-family: "Space Grotesk", sans-serif;
+.initial {
+    background-color: #1b1f24;
+    border-radius: 14px;
+    color: #2f81f7;
+    font-size: 50px;
+    font-family: "Yellowtail", cursive;
     font-style: normal;
     font-optical-sizing: auto;
-    font-weight: 700;
-    width: 300px;
+    font-weight: 500;
     float: left;
-    padding-left: 50px;
-    padding-top: 10px;
-    font-size: 40px;
-    color: white;
+    margin-right: 80px;
+    padding: 15px 18px 15px 15px;
+  }
+
+.full-name {
+    width: 0px;
+    visibility: hidden;
 }
 
 header h2 {
@@ -37,9 +45,9 @@ header h2 {
     font-optical-sizing: auto;
     font-weight: 600;
     clear: both;
-    font-size: 80px;
+    font-size: 120px;
     margin: 0;
-    padding: 120px 0px 0px 50px;
+    padding: 1000px 0px 0px 50px;
     color: white;
 }
 
@@ -53,12 +61,45 @@ header h3 {
     font-style: normal;
     font-optical-sizing: auto;
     font-weight: 500;
-    padding-left: 55px;
-    font-size: 25px;
-    margin-right: 450px;
-    margin-top: 5px;
+    font-size: 50px;
+    margin-top: 20px;
     color: white;
+    width: 1280px;
+    text-align: center;
 }
+
+.button-wrapper {
+  border: 6px solid #2f81f7;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  width: 500px;
+  margin-left: 390px;
+  animation-name: moveInBottom;
+  animation-duration: 0.7s;
+  animation-delay: 2.7s;
+  animation-fill-mode: backwards;
+  cursor: pointer;
+}
+
+@keyframes moveInBottom {
+  0% {
+      opacity: 0;
+      transform: translateY(4rem);
+  }
+
+  100% {
+      opacity: 1;
+      transform: translateY(0)
+  }
+}
+
+.button-wrapper h3 {
+  padding-left: 50px;
+  margin: 0;
+  color: #2f81f7;
+}
+
 
 
 .input {
@@ -66,12 +107,20 @@ header h3 {
     flex-direction: row;
     width: auto;
     justify-content: center;
-    border-radius: 5px;
+    border-radius: 20px;
     align-items: center;
-    padding-top: 40px;
+    margin-top: 15px;
     float: right;
-    margin-right: 40px;
+    margin-right: 70px;
+    background-color: #090a0c;
+    width: 1280px;
+    margin-right: 12px;
+    margin-left: 5px;
+    position: fixed;
+    padding: 10px 0;
+    z-index: 20;
   }
+
   
   .value {
     background-color: transparent;
@@ -119,7 +168,7 @@ header h3 {
   }
 
   .input .value p {
-    font-size: 20px;
+    font-size: 40px;
     font-family: "Space Grotesk", sans-serif;
     margin: 0px;
   }
@@ -132,8 +181,8 @@ header h3 {
   #particles-js {
     position: absolute;
     width: 1300px;
-    height: 1300px;
-    background-color: #000000;
+    height: 3100px;
+    background-color: #00000000;
     background-image: url("");
     background-repeat: no-repeat;
     background-size: cover;
@@ -141,4 +190,5 @@ header h3 {
     z-index: -1;
     }
 
+  
     
