--- a/css/main.css
+++ b/css/main.css
@@ -96,19 +96,19 @@ header h3 {
 .input {
     display: flex;
     flex-direction: row;
-    width: 1200px;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
     border-radius: 40px;
     align-items: center;
-    margin-top: 15px;
     float: right;
     background-color: #1a1f24;
-    width: 1280px;
-    margin-left: 5px;
+    width: 1260px;
     position: fixed;
     padding: 30px 0;
     z-index: 20;
     left: 10px;
+    margin: 20px 0 0 15px;
   }
 
   
@@ -122,7 +122,6 @@ header h3 {
     gap: 5px;
     cursor: pointer;
     border-radius: 4px;
-    margin: 0 10px 0 40px;
     transition: .5s;
   }
   
@@ -193,7 +192,7 @@ header h3 {
     }
 
     #about .content-wrapper {
-      height: 1900px;
+      height: 1600px;
       padding-top: 300px;
       overflow: hidden;
     }
@@ -331,17 +330,57 @@ header h3 {
 
 /*** Skills section ***/
 
-.skills h3 {
+
+.skill-list h3 {
   color: white;
-  font-size: 120px;
-  display: flex;
-  justify-content: center;
+  font-size: 35px;
+  margin: 10px 0 0 0;
 }
 
-.skill-list h2 {
-  color: white;
-  font-size: 60px;
+.skill-row1,
+.skill-row2,
+.skill-row3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  justify-content: space-evenly;
+  margin: 0 70px 0 70px;
+  height: 700px;
 }
+
+.skill-rows {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.skill-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: double 3px transparent; 
+  background-clip: content-box, border-box;
+  background-origin: border-box;
+  background-image: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0)), radial-gradient(circle at top left, white, white);
+  border-radius: 20px;
+  border-image-slice: 1;
+  padding: 4px 4px 4px 4px;
+  width: 250px;
+  height: 190px;
+  box-shadow: 0 0 55px 0px #2f81f7;
+}
+
+
+
+.skill-list img {
+  width: 90px;
+}
+
+
+
 
 
     
